libtorrent/c/libtorrent.h

//
// part structures
//

struct error_code
{
	int value;
	char* category;
	char * message;
};
struct endpoint
{
	const char* addr;

	int port;

	struct error_code error;
};
struct peer_request
{
	int piece;
	int start;
	int length;
};
//
// alert structures
//

struct alert
{
	int timestamp;
	char *message;
	char *what;
	int category;
};
struct torrent_alert
{
	struct alert alert;

	void* handle;
};
struct external_ip_alert
{
	struct alert alert;

	int external_address;
};
struct listen_failed_alert
{
	struct alert alert;

	struct endpoint endpoint;
	struct error_code error;
};
struct file_error_alert
{
	struct torrent_alert torrent_alert;

	const char* file;
	struct error_code error;
};
struct url_seed_alert
{
	struct torrent_alert torrent_alert;

	const char * url;
};
struct peer_alert
{
	struct torrent_alert torrent_alert;

	struct endpoint ip;
	int pid;
};
struct peer_connect_alert
{
	struct peer_alert peer_alert;
};
struct peer_error_alert
{
	struct peer_alert peer_alert;
	struct error_code error;
};
struct peer_disconnected_alert
{
	struct peer_alert peer_alert;

	struct error_code error;
};
struct invalid_request_alert
{
	struct peer_alert peer_alert;

	struct peer_request request;
};
struct request_dropped_alert
{
	struct peer_alert peer_alert;

	int block_index;
	int piece_index;
};
struct block_timeout_alert
{
	struct peer_alert peer_alert;

	int block_index;
	int piece_index;
};
struct block_finished_alert
{
	struct peer_alert peer_alert;

	int block_index;
	int piece_index;
};
struct block_downloading_alert
{
	struct peer_alert peer_alert;

	int block_index;
	int piece_index;
};
struct unwanted_block_alert
{
	struct peer_alert peer_alert;

	int block_index;
	int piece_index;
};
struct torrent_delete_failed_alert
{
	struct torrent_alert torrent_alert;

	struct error_code error;
};
struct torrent_deleted_alert
{
	struct torrent_alert torrent_alert;

	const char* info_hash;
};
struct storage_moved_alert
{
	struct torrent_alert torrent_alert;

	const char* path;
};
struct storage_moved_failed_alert
{
	struct torrent_alert torrent_alert;

	struct error_code error;
};
struct save_resume_data_alert
{
	struct torrent_alert torrent_alert;

	char* resume_data;
	int resume_data_size;
};
struct save_resume_data_failed_alert
{
	struct torrent_alert torrent_alert;

	error_code error;
};
struct torrent_paused_alert
{
	struct torrent_alert torrent_alert;
};
struct torrent_resumed_alert
{
	struct torrent_alert torrent_alert;
};
struct torrent_finished_alert
{
	struct torrent_alert torrent_alert;
};
struct piece_finished_alert
{
	struct torrent_alert torrent_alert;

	int piece_index;
};
struct torrent_checked_alert
{
	struct torrent_alert torrent_alert;
};
struct metadata_failed_alert
{
	struct torrent_alert torrent_alert;
};
struct metadata_received_alert
{
	struct torrent_alert torrent_alert;
};
struct udp_error_alert
{
	struct alert alert;

	struct endpoint entpoint;
	struct error_code errorcode;
};
peer_error_alert * cast_to_peer_error_alert(void* pop);
void free_peer_error_alert(peer_error_alert * aa);
peer_connect_alert * cast_to_peer_connect_alert(void* pop);
void free_peer_connect_alert(peer_connect_alert * aa);
peer_disconnected_alert * cast_to_peer_disconnected_alert(void* pop);
void free_peer_disconnected_alert(peer_disconnected_alert * aa);
invalid_request_alert * cast_to_invalid_request_alert(void* pop);
void free_invalid_request_alert(invalid_request_alert * aa);
torrent_finished_alert * cast_to_torrent_finished_alert(void* pop);
void free_torrent_finished_alert(torrent_finished_alert * aa);
piece_finished_alert * cast_to_piece_finished_alert(void* pop);
void free_piece_finished_alert(piece_finished_alert * aa);
request_dropped_alert * cast_to_request_dropped_alert(void* pop);
void free_request_dropped_alert(request_dropped_alert * aa);
block_timeout_alert * cast_to_block_timeout_alert(void* pop);
void free_block_timeout_alert(block_timeout_alert * aa);
block_finished_alert * cast_to_block_finished_alert(void* pop);
void free_block_finished_alert(block_finished_alert * aa);
block_downloading_alert * cast_to_block_downloading_alert(void* pop);
void free_block_downloading_alert(block_downloading_alert * aa);
unwanted_block_alert * cast_to_unwanted_block_alert(void* pop);
void free_unwanted_block_alert(unwanted_block_alert * aa);
storage_moved_alert * cast_to_storage_moved_alert(void* pop);
void free_storage_moved_alert(storage_moved_alert * aa);
storage_moved_failed_alert * cast_to_storage_moved_failed_alert(void* pop);
void free_storage_moved_failed_alert(storage_moved_failed_alert * aa);
torrent_deleted_alert * cast_to_torrent_deleted_alert(void* pop);
void free_torrent_deleted_alert(torrent_deleted_alert * aa);
torrent_delete_failed_alert * cast_to_torrent_delete_failed_alert(void* pop);
void free_torrent_delete_failed_alert(torrent_delete_failed_alert * aa);
save_resume_data_alert * cast_to_save_resume_data_alert(void* pop);
void free_save_resume_data_alert(save_resume_data_alert * aa);
save_resume_data_failed_alert * cast_to_save_resume_data_failed_alert(void* pop);
void free_save_resume_data_failed_alert(save_resume_data_failed_alert * aa);
torrent_paused_alert * cast_to_torrent_paused_alert(void* pop);
void free_torrent_paused_alert(torrent_paused_alert * aa);
torrent_resumed_alert * cast_to_torrent_resumed_alert(void* pop);
void free_torrent_resumed_alert(torrent_resumed_alert * aa);
torrent_checked_alert * cast_to_torrent_checked_alert(void* pop);
void free_torrent_checked_alert(torrent_checked_alert * aa);
url_seed_alert * cast_to_url_seed_alert(void* pop);
void free_url_seed_alert(url_seed_alert * aa);
file_error_alert * cast_to_file_error_alert(void* pop);
void free_file_error_alert(file_error_alert * aa);
metadata_failed_alert * cast_to_metadata_failed_alert(void* pop);
void free_metadata_failed_alert(metadata_failed_alert * aa);
metadata_received_alert * cast_to_metadata_received_alert(void* pop);
void free_metadata_received_alert(metadata_received_alert * aa);
udp_error_alert * cast_to_udp_error_alert(void* pop);
void free_udp_error_alert(udp_error_alert * aa);
external_ip_alert * cast_to_external_ip_alert(void* pop);
void free_external_ip_alert(external_ip_alert * aa);
listen_failed_alert * cast_to_listen_failed_alert(void* pop);