src/main/java/com/github/axet/torrent/rasterbar/TorrentLibrary.java

	/**
	 * Original signature : <code>peer_error_alert* cast_to_peer_error_alert(void*)</code><br>
	 * <i>native declaration : c/libtorrent.h:756</i>
	 */
	peer_error_alert cast_to_peer_error_alert(Pointer pop);
	/**
	 * Original signature : <code>void free_peer_error_alert(peer_error_alert*)</code><br>
	 * <i>native declaration : c/libtorrent.h:758</i>
	 */
	void free_peer_error_alert(peer_error_alert aa);
	/**
	 * Original signature : <code>peer_connect_alert* cast_to_peer_connect_alert(void*)</code><br>
	 * <i>native declaration : c/libtorrent.h:760</i>
	 */
	peer_connect_alert cast_to_peer_connect_alert(Pointer pop);
	/**
	 * Original signature : <code>void free_peer_connect_alert(peer_connect_alert*)</code><br>
	 * <i>native declaration : c/libtorrent.h:762</i>
	 */
	void free_peer_connect_alert(peer_connect_alert aa);
	/**
	 * Original signature : <code>peer_disconnected_alert* cast_to_peer_disconnected_alert(void*)</code><br>
	 * <i>native declaration : c/libtorrent.h:764</i>
	 */
	peer_disconnected_alert cast_to_peer_disconnected_alert(Pointer pop);
	/**
	 * Original signature : <code>void free_peer_disconnected_alert(peer_disconnected_alert*)</code><br>
	 * <i>native declaration : c/libtorrent.h:766</i>
	 */
	void free_peer_disconnected_alert(peer_disconnected_alert aa);
	/**
	 * Original signature : <code>invalid_request_alert* cast_to_invalid_request_alert(void*)</code><br>
	 * <i>native declaration : c/libtorrent.h:768</i>
	 */
	invalid_request_alert cast_to_invalid_request_alert(Pointer pop);
	/**
	 * Original signature : <code>void free_invalid_request_alert(invalid_request_alert*)</code><br>
	 * <i>native declaration : c/libtorrent.h:770</i>
	 */
	void free_invalid_request_alert(invalid_request_alert aa);
	/**
	 * Original signature : <code>torrent_finished_alert* cast_to_torrent_finished_alert(void*)</code><br>
	 * <i>native declaration : c/libtorrent.h:772</i>
	 */
	torrent_finished_alert cast_to_torrent_finished_alert(Pointer pop);
	/**
	 * Original signature : <code>void free_torrent_finished_alert(torrent_finished_alert*)</code><br>
	 * <i>native declaration : c/libtorrent.h:774</i>
	 */
	void free_torrent_finished_alert(torrent_finished_alert aa);
	/**
	 * Original signature : <code>piece_finished_alert* cast_to_piece_finished_alert(void*)</code><br>
	 * <i>native declaration : c/libtorrent.h:776</i>
	 */
	piece_finished_alert cast_to_piece_finished_alert(Pointer pop);
	/**
	 * Original signature : <code>void free_piece_finished_alert(piece_finished_alert*)</code><br>
	 * <i>native declaration : c/libtorrent.h:778</i>
	 */
	void free_piece_finished_alert(piece_finished_alert aa);
	/**
	 * Original signature : <code>request_dropped_alert* cast_to_request_dropped_alert(void*)</code><br>
	 * <i>native declaration : c/libtorrent.h:780</i>
	 */
	request_dropped_alert cast_to_request_dropped_alert(Pointer pop);
	/**
	 * Original signature : <code>void free_request_dropped_alert(request_dropped_alert*)</code><br>
	 * <i>native declaration : c/libtorrent.h:782</i>
	 */
	void free_request_dropped_alert(request_dropped_alert aa);
	/**
	 * Original signature : <code>block_timeout_alert* cast_to_block_timeout_alert(void*)</code><br>
	 * <i>native declaration : c/libtorrent.h:784</i>
	 */
	block_timeout_alert cast_to_block_timeout_alert(Pointer pop);
	/**
	 * Original signature : <code>void free_block_timeout_alert(block_timeout_alert*)</code><br>
	 * <i>native declaration : c/libtorrent.h:786</i>
	 */
	void free_block_timeout_alert(block_timeout_alert aa);
	/**
	 * Original signature : <code>block_finished_alert* cast_to_block_finished_alert(void*)</code><br>
	 * <i>native declaration : c/libtorrent.h:788</i>
	 */
	block_finished_alert cast_to_block_finished_alert(Pointer pop);
	/**
	 * Original signature : <code>void free_block_finished_alert(block_finished_alert*)</code><br>
	 * <i>native declaration : c/libtorrent.h:790</i>
	 */
	void free_block_finished_alert(block_finished_alert aa);
	/**
	 * Original signature : <code>block_downloading_alert* cast_to_block_downloading_alert(void*)</code><br>
	 * <i>native declaration : c/libtorrent.h:792</i>
	 */
	block_downloading_alert cast_to_block_downloading_alert(Pointer pop);
	/**
	 * Original signature : <code>void free_block_downloading_alert(block_downloading_alert*)</code><br>
	 * <i>native declaration : c/libtorrent.h:794</i>
	 */
	void free_block_downloading_alert(block_downloading_alert aa);
	/**
	 * Original signature : <code>unwanted_block_alert* cast_to_unwanted_block_alert(void*)</code><br>
	 * <i>native declaration : c/libtorrent.h:796</i>
	 */
	unwanted_block_alert cast_to_unwanted_block_alert(Pointer pop);
	/**
	 * Original signature : <code>void free_unwanted_block_alert(unwanted_block_alert*)</code><br>
	 * <i>native declaration : c/libtorrent.h:798</i>
	 */
	void free_unwanted_block_alert(unwanted_block_alert aa);
	/**
	 * Original signature : <code>storage_moved_alert* cast_to_storage_moved_alert(void*)</code><br>
	 * <i>native declaration : c/libtorrent.h:800</i>
	 */
	storage_moved_alert cast_to_storage_moved_alert(Pointer pop);
	/**
	 * Original signature : <code>void free_storage_moved_alert(storage_moved_alert*)</code><br>
	 * <i>native declaration : c/libtorrent.h:802</i>
	 */
	void free_storage_moved_alert(storage_moved_alert aa);
	/**
	 * Original signature : <code>storage_moved_failed_alert* cast_to_storage_moved_failed_alert(void*)</code><br>
	 * <i>native declaration : c/libtorrent.h:804</i>
	 */
	storage_moved_failed_alert cast_to_storage_moved_failed_alert(Pointer pop);
	/**
	 * Original signature : <code>void free_storage_moved_failed_alert(storage_moved_failed_alert*)</code><br>
	 * <i>native declaration : c/libtorrent.h:806</i>
	 */
	void free_storage_moved_failed_alert(storage_moved_failed_alert aa);
	/**
	 * Original signature : <code>torrent_deleted_alert* cast_to_torrent_deleted_alert(void*)</code><br>
	 * <i>native declaration : c/libtorrent.h:808</i>
	 */
	torrent_deleted_alert cast_to_torrent_deleted_alert(Pointer pop);
	/**
	 * Original signature : <code>void free_torrent_deleted_alert(torrent_deleted_alert*)</code><br>
	 * <i>native declaration : c/libtorrent.h:810</i>
	 */
	void free_torrent_deleted_alert(torrent_deleted_alert aa);
	/**
	 * Original signature : <code>torrent_delete_failed_alert* cast_to_torrent_delete_failed_alert(void*)</code><br>
	 * <i>native declaration : c/libtorrent.h:812</i>
	 */
	torrent_delete_failed_alert cast_to_torrent_delete_failed_alert(Pointer pop);
	/**
	 * Original signature : <code>void free_torrent_delete_failed_alert(torrent_delete_failed_alert*)</code><br>
	 * <i>native declaration : c/libtorrent.h:814</i>
	 */
	void free_torrent_delete_failed_alert(torrent_delete_failed_alert aa);
	/**
	 * Original signature : <code>save_resume_data_alert* cast_to_save_resume_data_alert(void*)</code><br>
	 * <i>native declaration : c/libtorrent.h:816</i>
	 */
	save_resume_data_alert cast_to_save_resume_data_alert(Pointer pop);
	/**
	 * Original signature : <code>void free_save_resume_data_alert(save_resume_data_alert*)</code><br>
	 * <i>native declaration : c/libtorrent.h:818</i>
	 */
	void free_save_resume_data_alert(save_resume_data_alert aa);
	/**
	 * Original signature : <code>save_resume_data_failed_alert* cast_to_save_resume_data_failed_alert(void*)</code><br>
	 * <i>native declaration : c/libtorrent.h:820</i>
	 */
	save_resume_data_failed_alert cast_to_save_resume_data_failed_alert(Pointer pop);
	/**
	 * Original signature : <code>void free_save_resume_data_failed_alert(save_resume_data_failed_alert*)</code><br>
	 * <i>native declaration : c/libtorrent.h:822</i>
	 */
	void free_save_resume_data_failed_alert(save_resume_data_failed_alert aa);
	/**
	 * Original signature : <code>torrent_paused_alert* cast_to_torrent_paused_alert(void*)</code><br>
	 * <i>native declaration : c/libtorrent.h:824</i>
	 */
	torrent_paused_alert cast_to_torrent_paused_alert(Pointer pop);
	/**
	 * Original signature : <code>void free_torrent_paused_alert(torrent_paused_alert*)</code><br>
	 * <i>native declaration : c/libtorrent.h:826</i>
	 */
	void free_torrent_paused_alert(torrent_paused_alert aa);
	/**
	 * Original signature : <code>torrent_resumed_alert* cast_to_torrent_resumed_alert(void*)</code><br>
	 * <i>native declaration : c/libtorrent.h:828</i>
	 */
	torrent_resumed_alert cast_to_torrent_resumed_alert(Pointer pop);
	/**
	 * Original signature : <code>void free_torrent_resumed_alert(torrent_resumed_alert*)</code><br>
	 * <i>native declaration : c/libtorrent.h:830</i>
	 */
	void free_torrent_resumed_alert(torrent_resumed_alert aa);
	/**
	 * Original signature : <code>torrent_checked_alert* cast_to_torrent_checked_alert(void*)</code><br>
	 * <i>native declaration : c/libtorrent.h:832</i>
	 */
	torrent_checked_alert cast_to_torrent_checked_alert(Pointer pop);
	/**
	 * Original signature : <code>void free_torrent_checked_alert(torrent_checked_alert*)</code><br>
	 * <i>native declaration : c/libtorrent.h:834</i>
	 */
	void free_torrent_checked_alert(torrent_checked_alert aa);
	/**
	 * Original signature : <code>url_seed_alert* cast_to_url_seed_alert(void*)</code><br>
	 * <i>native declaration : c/libtorrent.h:836</i>
	 */
	url_seed_alert cast_to_url_seed_alert(Pointer pop);
	/**
	 * Original signature : <code>void free_url_seed_alert(url_seed_alert*)</code><br>
	 * <i>native declaration : c/libtorrent.h:838</i>
	 */
	void free_url_seed_alert(url_seed_alert aa);
	/**
	 * Original signature : <code>file_error_alert* cast_to_file_error_alert(void*)</code><br>
	 * <i>native declaration : c/libtorrent.h:840</i>
	 */
	file_error_alert cast_to_file_error_alert(Pointer pop);
	/**
	 * Original signature : <code>void free_file_error_alert(file_error_alert*)</code><br>
	 * <i>native declaration : c/libtorrent.h:842</i>
	 */
	void free_file_error_alert(file_error_alert aa);
	/**
	 * Original signature : <code>metadata_failed_alert* cast_to_metadata_failed_alert(void*)</code><br>
	 * <i>native declaration : c/libtorrent.h:844</i>
	 */
	metadata_failed_alert cast_to_metadata_failed_alert(Pointer pop);
	/**
	 * Original signature : <code>void free_metadata_failed_alert(metadata_failed_alert*)</code><br>
	 * <i>native declaration : c/libtorrent.h:846</i>
	 */
	void free_metadata_failed_alert(metadata_failed_alert aa);
	/**
	 * Original signature : <code>metadata_received_alert* cast_to_metadata_received_alert(void*)</code><br>
	 * <i>native declaration : c/libtorrent.h:848</i>
	 */
	metadata_received_alert cast_to_metadata_received_alert(Pointer pop);
	/**
	 * Original signature : <code>void free_metadata_received_alert(metadata_received_alert*)</code><br>
	 * <i>native declaration : c/libtorrent.h:850</i>
	 */
	void free_metadata_received_alert(metadata_received_alert aa);
	/**
	 * Original signature : <code>udp_error_alert* cast_to_udp_error_alert(void*)</code><br>
	 * <i>native declaration : c/libtorrent.h:852</i>
	 */
	udp_error_alert cast_to_udp_error_alert(Pointer pop);
	/**
	 * Original signature : <code>void free_udp_error_alert(udp_error_alert*)</code><br>
	 * <i>native declaration : c/libtorrent.h:854</i>
	 */
	void free_udp_error_alert(udp_error_alert aa);
	/**
	 * Original signature : <code>external_ip_alert* cast_to_external_ip_alert(void*)</code><br>
	 * <i>native declaration : c/libtorrent.h:856</i>
	 */
	external_ip_alert cast_to_external_ip_alert(Pointer pop);
	/**
	 * Original signature : <code>void free_external_ip_alert(external_ip_alert*)</code><br>
	 * <i>native declaration : c/libtorrent.h:858</i>
	 */
	void free_external_ip_alert(external_ip_alert aa);
	/**
	 * Original signature : <code>listen_failed_alert* cast_to_listen_failed_alert(void*)</code><br>
	 * <i>native declaration : c/libtorrent.h:860</i>
	 */
	listen_failed_alert cast_to_listen_failed_alert(Pointer pop);
